
171214 Martin Raden :
 * m4:
   * *.m4 : updated to recent versions
   + m4-ax_boost_*.m4 : boost library checks 

171213 Martin Raden :
 * configure.ac :
   * leading spaces in macros removed
   + default macro definitions if pkg.m4 not available
   + silent make output enabled per default (full output with 'make V=1')
   - obsolete pkg-config m4 check removed

171211 Martin Raden :
 * IntaRNA/PredictorMfe :
   * traceBack() : 
     + argument outConstraint (needed to bugfix the PredictorMfe2d computation)
   * reportOptima() :
     + forwards outConstraint to traceBack() call
 * IntaRNA/PredictorMfe* :
   * adaption to traceBack() interface changes
 * IntaRNA/PredictorMfe2d :
   * traceBack() :
     * bugfix: outConstraint missing in fillHybridE() call but called with 
       (&outConstraint = i1) and (i1 = i2), which caused infinite tracebacks
   * initHybridE() :
     - default argument values (=0) removed to avoid wrong argument use (see
       traceBack() bugfix)
     - special initialization removed to simplify code (and not applied anyway)
   * fillHybridE() :
     - default argument values (=0) removed to avoid wrong argument use (see
       traceBack() bugfix)
     * computation simplified
 * IntaRNA/PredictorMfe2d :
   * fillHybridE() :
     * bugfix: outConstraint missing in fillHybridE() call but called with 
       (&outConstraint = i1) and (i1 = i2), which caused infinite tracebacks
 * IntaRNA/PredictorMfe2dSeed :
   * fillHybridE_seed() :
     + outConstraint argument
     * bugfix: outConstraint missing in fillHybridE() call but called with 
       (&outConstraint = i1) and (i1 = i2), which caused infinite tracebacks

171127 Martin Raden :
 * bin/CommandLineParsing :
   * getThreads() :
     * returns threads.max if threads.val == 0
   * threads :
     * min value = 0 (request maximal number of threads)
     * parameter docu updated accordingly
   * validateRegion() :
     + instantiate range list to ensure that it is ascending and non-overlapping